<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"

           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="50dp"
               android:layout_marginRight="50dp"
               android:paddingBottom="5dp"
               android:text="@string/mobile_text"
               android:textSize="11sp" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="50dp"
               android:layout_marginRight="50dp"
               android:orientation="horizontal"
               android:weightSum="1">


               <com.hmi.assignment.helperClasses.CustomEditText
                   android:id="@+id/number"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:clickable="false"
                   android:enabled="false"
                   android:focusable="false"
                   android:hint=""
                   android:inputType="number"
                   android:paddingBottom="20dp"
                   android:textSize="15sp" />
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"

           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="50dp"
               android:layout_marginRight="50dp"
               android:paddingBottom="5dp"
               android:text="@string/setpaswd_text"
               android:textSize="11sp" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="50dp"
               android:layout_marginRight="50dp"
               android:orientation="horizontal"
               android:weightSum="1">


               <com.hmi.assignment.helperClasses.CustomEditText
                   android:id="@+id/userpassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:drawableRight="@drawable/close"
                   android:hint=""
                   android:inputType="textPassword"
                   android:paddingBottom="20dp"
                   android:textSize="15sp" />
           </LinearLayout>
       </LinearLayout>
       <Button
           android:id="@+id/loginuser"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="30dp"
           android:layout_marginRight="50dp"
           android:layout_marginBottom="20dp"
           android:background="@drawable/registrationrounded"
           android:text="@string/login_text"
           android:textColor="@color/white"
           android:textSize="17sp" />
   </LinearLayout>

</RelativeLayout>