<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SignupFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--https://www.mama.ly/wp-json/wp/v2/posts?page=1&categories=7%2C%2032&per_page=10&context=embed&exclude=1731-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/backbutton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/backicon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/headerimage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:src="@drawable/signup" />


                <TextView
                    android:id="@+id/screenheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/signup_text"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingBottom="5dp"
                        android:text="@string/mobile_text"
                        android:textSize="11sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:orientation="horizontal"
                        android:weightSum="1">


                        <com.hmi.assignment.helperClasses.CustomEditText
                            android:id="@+id/number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint=""
                            android:inputType="number"
                            android:paddingBottom="20dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingBottom="5dp"
                        android:text="@string/fullnam_text"
                        android:textSize="11sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:orientation="horizontal"
                        android:weightSum="1">


                        <com.hmi.assignment.helperClasses.CustomEditText
                            android:id="@+id/fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/close"
                            android:hint=""
                            android:inputType="text"
                            android:paddingBottom="20dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingBottom="5dp"
                        android:text="@string/email_text"
                        android:textSize="11sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:orientation="horizontal"
                        android:weightSum="1">


                        <com.hmi.assignment.helperClasses.CustomEditText
                            android:id="@+id/useremail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/close"
                            android:hint=""
                            android:inputType="text"
                            android:paddingBottom="20dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingBottom="5dp"
                        android:text="@string/setpaswd_text"
                        android:textSize="11sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:orientation="horizontal"
                        android:weightSum="1">


                        <com.hmi.assignment.helperClasses.CustomEditText
                            android:id="@+id/userpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/close"
                            android:hint=""
                            android:inputType="textPassword"
                            android:paddingBottom="20dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:paddingBottom="5dp"
                        android:text="@string/confirmpass_text"
                        android:textSize="11sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:orientation="horizontal"
                        android:weightSum="1">


                        <com.hmi.assignment.helperClasses.CustomEditText
                            android:id="@+id/userconfirmpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/close"
                            android:hint=""
                            android:inputType="textPassword"
                            android:paddingBottom="20dp"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/registeruser"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/registrationrounded"
                    android:text="@string/register_text"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>